[tool.poetry]
name = "transx-api"
version = "0.1.0"
description = ""
authors = ["Matheus bastos <matheusjohonston2010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
