[tool.poetry]
name = "transx-api"
version = "0.1.0"
description = ""
authors = ["Matheus bastos <matheusjohonston2010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
boto3 = "^1.35.25"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"
black = "^24.8.0"
httpx = "^0.27.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
