[tool.poetry]
name = "transx_web"
version = "0.1.0"
description = ""
authors = ["Julio Faerman <356476+faermanj@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "transx_web"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
